ajout d'une vidéo

--- a/index.html
+++ b/index.html
@@ -80,6 +80,34 @@
         </section>
 
 
+        <section class="goymacode">
+            <div class="gauche">
+                <h1>À la recherche d'une formation ? Découvrez également Goymacode !</h1>
+                <p>Vous êtes en quête de nouvelles compétences en informatique ou en développement ? Goymacode est une structure spécialisée dans la formation aux technologies numériques. Grâce à des formations pratiques et adaptées à tous les niveaux, Goymacode vous accompagne dans l'acquisition de compétences clés pour réussir dans le monde numérique.</p>
+    
+                <p>Ne laissez pas l'opportunité d'améliorer vos connaissances et de booster votre carrière !</p>
+    
+                <a href="https://gomycode.com/ic/fr/courses/"> Cliquez ici pour en savoir plus</a>
+            </div>
+            <img src="./ressource/goymacode.jpg" alt="">
+
+        </section>
+
+
+        <section class="video">
+
+            <h1>"L'Informatique plus qu'une passion, Un Style de vie "Serveur9.1"</h1>
+            <p>Se lancer dans l'informatique est une aventure passionnante, mais les débuts peuvent être remplis de défis : concepts complexes, erreurs fréquentes, et adaptation constante. Ne vous découragez pas, chaque difficulté est une étape vers la maîtrise !
+            Regardez cette vidéo inspirante et  rappelez-vous : L'expert était un jour débutant.</p>
+
+            <video width="420" height="440" controls>
+                <source src="./ressource/Premières Lignes - Vidéo Motivation Pour Coder 👊.mp4" type="video/mp4">
+              </video>
+
+
+        </section>
+
+
         <section id="contact" class="contact">
             <form action="">
                 <h1>Contactez nous</h1>
